feat: Implement face detection, copy, save, and auto-fill
- Activates face detection by loading models via web_accessible_resources.
- Adds 'Copy' and 'Save' buttons to each cropped face image, allowing
  users to easily use the results.
- Adds an 'Auto-fill' button to each data row.
- Creates an autofill.js content script to inject data into the
  form on face-recognise.vercel.app.
- Updates manifest with clipboardWrite permission and host permissions
  for the target site.
- Enhances UI to support new actions.

--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -28,6 +28,7 @@
                     <th>Subject</th>
                     <th>Images</th>
                     <th>Cropped Faces</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
